🔧 fix: consertando problemas que existiam nas requisicoes existentes